# skyzen

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  release-plz.toml  test  test_migration.rs  typos.toml
.github/workflows/: ci.yml  test.yml  workerd.yml
ci/workerd/: worker.mjs  wrangler.toml
core/: CHANGELOG.md  Cargo.toml
core/src/: error.rs  extract.rs  lib.rs  macros.rs  openapi.rs  responder.rs  server.rs
examples/: README.md  embed_hyper.rs  native.rs  openapi.rs  openapi_full.rs  websocket_echo.rs  worker.rs
hyper/: CHANGELOG.md  Cargo.toml
hyper/src/: lib.rs  service.rs
hyper/tests/: websocket.rs
macros/: CHANGELOG.md  Cargo.toml
macros/src/: lib.rs
macros/tests/: openapi_macro.rs
skyzen/: Cargo.toml
skyzen-core/: Cargo.toml
skyzen-core/src/: extract.rs  lib.rs  macros.rs  responder.rs  server.rs
skyzen-hyper/: Cargo.toml
skyzen-hyper/src/: lib.rs  service.rs
skyzen-macros/: Cargo.toml
skyzen-macros/src/: lib.rs
skyzen-macros/tests/: openapi_macro.rs
skyzen-macros/tests/fixtures/: openapi_fn.rs  openapi_ignore_and_proxy.rs  openapi_missing_schema.rs  openapi_missing_schema.stderr  openapi_struct.rs  openapi_struct.stderr
skyzen/src/: handler.rs  lib.rs  macros.rs  test_helper.rs
skyzen/src/extract/: client_ip.rs  mod.rs  query.rs
skyzen/src/middleware/: mod.rs
skyzen/src/responder/: json.rs  mod.rs
skyzen/src/responder/sse/: channel.rs  mod.rs
skyzen/src/routing/: mod.rs  router.rs
skyzen/src/utils/: form.rs  json.rs  mod.rs  state.rs
src/: handler.rs  lib.rs  macros.rs  static_files.rs  test_helper.rs
src/auth/: guard.rs  jwt.rs  mod.rs
src/extract/: client_ip.rs  mod.rs  query.rs
src/extract/auth/: bearer.rs  mod.rs
src/middleware/: auth.rs  compression.rs  error_handling.rs  mod.rs
src/openapi/: builtins.rs  impls.rs  mod.rs
src/responder/: json.rs  mod.rs
src/responder/sse/: channel.rs  mod.rs
src/routing/: mod.rs  param.rs  router.rs
src/runtime/: mod.rs  native.rs  wasm.rs
src/utils/: cookie.rs  form.rs  json.rs  mod.rs  multipart.rs  state.rs
src/websocket/: ffi.rs  mod.rs  native.rs  types.rs  wasm.rs
