[workspace]
members = ["core","hyper", "macros"]
resolver = "2"

[workspace.dependencies]
skyzen-core = { path = "core" }
skyzen-macros = { path = "macros" }

http-kit = { git = "https://github.com/zen-rs/http-kit", branch = "dev" }
executor-core = { version = "0.7.0", default-features = false }
skyzen-hyper = { path = "hyper" }


tracing = "0.1.40"
skyzen = { path = "."}

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
clippy.multiple_crate_versions = { level = "allow", priority = 1 }

[package]
name = "skyzen"
version = "0.1.0"
edition = "2021"
description = "Skyzen - a pragmatic HTTP framework built on http-kit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zen-rs/skyzen"
readme = "README.md"
keywords = ["http", "web", "framework"]
categories = ["web-programming::http-server"]

[dependencies]
skyzen-core.workspace = true
http-kit.workspace = true
matchit = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
cookie = { version = "0.18.1", features = ["percent-encode"] }
tracing.workspace = true
smallvec = "1.15"
mime_guess = "2.0"
skyzen-macros.workspace = true
base64 = { version = "0.22", optional = true }
sha1 = { version = "0.10", optional = true }
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "signal", "macros"], optional = true }
hyper = { version = "1.6", optional = true }
hyper-util = { version = "0.1.15", optional = true, features = ["tokio", "server", "http1"] }
http-body-util = { version = "0.1.3", optional = true }
futures-util = { version = "0.3.31", optional = true }
futures-core = { version = "0.3.31", optional = true }
multer = { version = "3.0", optional = true }
http = "1.3"
linkme = "0.3"
utoipa = { version = "5.4", default-features = false }
utoipa-redoc = "6.0"
async-fs = "2.2.0"

[dev-dependencies]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.32.0", optional = true, features = ["tokio-runtime"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal"] }
femme = "2.2.1"
skyzen-hyper.workspace = true
tempfile = "3.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.92", features = ["spans"] }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["Request", "Response", "ResponseInit", "Headers", "ReadableStream", "ReadableStreamDefaultReader", "ReadableStreamDefaultController"] }
futures-channel = { version = "0.3.31", optional = true }

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde_urlencoded]
version = "0.7.1"
optional = true

[dependencies.itoa]
version = "1.0"
optional = true

[dependencies.async-channel]
version = "2.3"
optional = true

[dependencies.pin-project-lite]
version = "0.2.16"
optional = true

[features]
default = ["json", "form", "multipart", "sse", "rt", "openapi", "ws"]
openapi = ["skyzen-core/openapi"]
json = ["dep:serde_json", "http-kit/json"]
form = ["dep:serde_urlencoded", "http-kit/form"]
multipart = ["dep:multer", "dep:pin-project-lite", "dep:futures-core"]
sse = ["dep:itoa", "dep:async-channel", "dep:pin-project-lite"]
websocket = ["json", "dep:futures-core"]
ws = [
    "websocket",
    "rt",
    "dep:async-tungstenite",
    "dep:base64",
    "dep:sha1",
    "dep:futures-util",
    "dep:futures-channel",
]
websocket-native = ["ws"]
websocket-wasm = ["ws"]
rt = [
    "dep:tokio",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:futures-util",
]

[lints]
workspace = true
