[workspace]
members = ["core","hyper", "macros"]
resolver = "2"

[workspace.dependencies]
skyzen-core = { path = "core", version = "0.1.0" }
skyzen-macros = { path = "macros", version = "0.1.0" }

http-kit = "0.4.2"
executor-core = { version = "0.7.1", default-features = false, features = ["std", "async-executor"] }
skyzen-hyper = { path = "hyper", version = "0.1.0" }
tracing = "0.1.40"
skyzen = { path = ".", version = "0.1.0"}
async-executor = "1.13"
async-io = "2.6"
async-net = "2.0"
ctrlc = "3.4"

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
clippy.multiple_crate_versions = { level = "allow", priority = 1 }

[package]
name = "skyzen"
version = "0.1.0"
edition = "2021"
description = "Skyzen - a pragmatic HTTP framework built on http-kit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zen-rs/skyzen"
readme = "README.md"
keywords = ["http", "web", "framework"]
categories = ["web-programming::http-server"]

[dependencies]
skyzen-core.workspace = true
http-kit.workspace = true
matchit = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
cookie = { version = "0.18.1", features = ["percent-encode"] }
tracing.workspace = true
smallvec = "1.15"
mime_guess = "2.0"
skyzen-macros.workspace = true
base64 = { version = "0.22", optional = true }
sha1 = { version = "0.10", optional = true }
futures-util = { version = "0.3.31" }
futures-core = { version = "0.3.31" }
multer = { version = "3.0", optional = true }
http = "1.3"
utoipa = { version = "5.4", default-features = false }
utoipa-redoc = "6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.32.0", optional = true }
color-eyre = "0.6"
linkme = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
# Native-only dependencies (always available, not gated by features)
executor-core.workspace = true
async-executor.workspace = true
async-fs = "2.2.0"
async-net.workspace = true
async-io.workspace = true
# async-channel is always available on native (used by runtime) and is also
# available on WASM when the `sse` feature is enabled
async-channel = "2.3"
ctrlc.workspace = true
hyper = { version = "1.6", features = ["server", "http1", "http2"] }
http-body-util = "0.1.3"
# Optional native dependencies
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "signal"], optional = true }
skyzen-hyper = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "net"] }
executor-core = { version = "0.7.1", features = ["tokio"] }
femme = "2.2.1"
skyzen-hyper.workspace = true
tempfile = "3.12"
smol = "2.0"
futures-lite = "2.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.92", features = ["spans"] }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["Request", "Response", "ResponseInit", "Headers", "ReadableStream", "ReadableStreamDefaultReader", "ReadableStreamDefaultController"] }
futures-channel = { version = "0.3.31", optional = true }

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde_urlencoded]
version = "0.7.1"
optional = true

[dependencies.itoa]
version = "1.0"
optional = true

[dependencies.async-channel]
version = "2.3"
optional = true

[dependencies.pin-project-lite]
version = "0.2.16"
optional = true

[features]
default = ["json", "form", "multipart", "sse", "rt", "openapi", "ws"]
openapi = ["skyzen-core/openapi"]
json = ["dep:serde_json", "http-kit/json"]
form = ["dep:serde_urlencoded", "http-kit/form"]
multipart = ["dep:multer", "dep:pin-project-lite"]
sse = ["dep:itoa", "dep:async-channel", "dep:pin-project-lite"]
ws = [
    "json",
    "dep:futures-channel",
    "dep:base64",
    "dep:sha1",
    "dep:async-tungstenite",  # Only compiles on native (target-specific dep)
]
# The `rt` feature enables the built-in runtime for `#[skyzen::main]`.
# On native targets: provides logging, signal handling (ctrl+c), and serves HTTP via hyper+tokio.
# On WASM targets: no-op (WASM already runs in a runtime and uses WinterCG APIs).
rt = []
# The `hyper` feature provides the Hyper server adapter (`skyzen::hyper`).
# Use this when embedding Skyzen into your own application with a custom runtime.
# You only need to bring your own tokio runtime; no need to import hyper or hyper-util directly.
# Note: hyper and http-body-util are always available on native targets; this feature
# enables the skyzen-hyper convenience wrapper.
hyper = ["dep:skyzen-hyper"]

[lints]
workspace = true
