[package]
name = "skyzen-core"
version = "0.1.0"
edition = "2021"
description = "Foundational extractor/responder traits for the Skyzen framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zen-rs/skyzen"
readme = "../README.md"
keywords = ["http", "web", "framework"]
categories = ["web-programming::http-server"]

[dependencies]
http-kit.workspace = true
executor-core = { workspace = true, default-features = false }
eyre = "0.6.12"
utoipa = { version = "5.4", optional = true, default-features = false }

[lints]
workspace = true

[features]
default = ["std"]
std = []
openapi = ["std", "dep:utoipa"]
