[package]
name = "skyzen-hyper"
version = "0.1.0"
edition = "2021"
description = "Hyper server backend for the Skyzen framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zen-rs/skyzen"
readme = "../README.md"
keywords = ["http", "web", "framework"]
categories = ["web-programming::http-server"]

[dependencies]
log.workspace = true
skyzen.workspace = true
tower-service = "0.3.3"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.13", features = ["server", "http1", "http2"] }
executor-core.workspace = true

[dependencies.hyper]
features = ["server", "http1", "http2"]
version = "1.6"
default-features = false

[lints]
workspace = true
