[package]
name = "skyzen-hyper"
version = "0.1.0"
edition = "2021"
description = "Hyper server backend for the Skyzen framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zen-rs/skyzen"
readme = "../README.md"
keywords = ["http", "web", "framework"]
categories = ["web-programming::http-server"]

[dependencies]
skyzen-core.workspace = true
http-kit.workspace = true
futures-util = "0.3.31"
http-body-util = "0.1.3"
executor-core.workspace = true
tracing.workspace = true
[dependencies.hyper]
features = ["server", "http1", "http2"]
version = "1.6"
default-features = false

[dev-dependencies]
async-tungstenite = { version = "0.32.0", features = ["tokio-runtime"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "io-util"] }
executor-core = { version = "0.7.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-executor = "1.13"
skyzen.workspace = true

[lints]
workspace = true
