[package]
name = "skyzen-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
skyzen = { path = "../skyzen" }
tower-service = "0.3.3"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.13", features = ["server", "http1", "http2"] }
executor-core= { version = "0.1.0", default-features = false}

[dependencies.hyper]
features = ["server", "http1", "http2"]
version = "1.6"
default-features = false
