[package]
name = "skyzen"
version = "0.1.0"
edition = "2021"

[dependencies]
skyzen-core.workspace = true
http-kit.workspace = true
matchit = "0.8.6"
serde = "1.0"
cookie = { version = "0.18.1", features = ["percent-encode"] }
log.workspace = true
smallvec = "1.15"

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt"] }
log.workspace = true
femme = "2.2.1"
skyzen-hyper = { path = "../skyzen-hyper" }
zenwave = { git = "https://github.com/zen-rs/zenwave.git"}
serde = { version = "1.0", features = ["derive"] }

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde_urlencoded]
version = "0.7.1"
optional = true

[dependencies.itoa]
version = "1.0"
optional = true

[dependencies.anyhow]
version = "1.0"
optional = true

[dependencies.async-channel]
version = "2.3"
optional = true

[dependencies.pin-project-lite]
version = "0.2.16"
optional = true


[features]
default = ["json", "form", "sse"]
json = ["dep:serde_json", "http-kit/json"]
form = ["dep:serde_urlencoded", "http-kit/form"]
sse = ["dep:itoa", "dep:anyhow", "dep:async-channel", "dep:pin-project-lite"]
